polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__chemical_composition.snap
---
source: polychem/src/atoms/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Hydrogen",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    None,
)
